<resources>
    <string name="app_name">easestandby</string>
    <string name="game_view_content_description">Game view</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="main_page_selected">%s page is selected </string>
    <string name="score">Score 0/10</string>
    <string name="question_number">1/10 Question</string>
    <string name="question_1">Is it true that Earthquakes can trigger tsunami?</string>
    <string name="question1_A">True</string>
    <string name="question1_B">False</string>
    <string name="question1_C">I do not know</string>
    <string name="question1_D">Maybe</string>
    <string name="answer_1">True</string>
    <string name="question_2">What does P.A.R. stands for?</string>
    <string name="question_2A">Philippine Area of Readiness</string>
    <string name="question_2B">Philippines Area of Responsibility</string>
    <string name="question_2C">Philippine Area of Responsibility</string>
    <string name="question_2D">Philippine Are Ready</string>
    <string name="answer_2">Philippine Area of Responsibility</string>
    <string name="question_3">What does PAGASA stands for?</string>
    <string name="question_3A"> Phillipine Atmospheric Geophysical  and  Astronomical Services Administration </string>
    <string name="question_3B">  Phillipine Atmospheric Geophysical  and  Astrology Services Administration </string>
    <string name="question_3C">  Pilipinas Atmospheric Geophysical  and  Astronomical Services Administrations </string>
    <string name="question_3D"> None of the above </string>
    <string name="answer_3"> Phillipine Atmospheric Geophysical  and  Astronomical Services Administration</string>
    <string name="question_4">Their role is to provide information such as the weather forecast, advisories, tropical cyclone and flood bulletins warnings</string>
    <string name="question_4A">PAGASA </string>
    <string name="question_4B">DENR</string>
    <string name="question_4C">DepEd</string>
    <string name="question_4D">DSWD</string>
    <string name="answer_4">PAGASA</string>
    <string name="question_5">Why is Philippines prone to typhoon? </string>
    <string name="question_5A">Because it is located far the equator and faces the east Atlantic, </string>
    <string name="question_5B">Due to its graphical location</string>
    <string name="question_5C">Because it is a small country </string>
    <string name="question_5D">None of the above </string>
    <string name="answer_5">Due to its graphical location</string>
    <string name="question_6">It is the effect of a strong typhoon </string>
    <string name="question_6A">Earthquake </string>
    <string name="question_6B">Fire</string>
    <string name="question_6C">Volcanic Eruption</string>
    <string name="question_6D">Flood </string>
    <string name="answer_6">Flood</string>
    <string name="question_7">What is the average number of typhoons in the Philippines? </string>
    <string name="question_7A">5</string>
    <string name="question_7B">10</string>
    <string name="question_7C">15</string>
    <string name="question_7D">20</string>
    <string name="answer_7">20</string>
    <string name="question_8">During an earthquake, what is the best thing to do?</string>
    <string name="question_8A">Duck, Cover, and Hold</string>
    <string name="question_8B">Record or Video the happenings</string>
    <string name="question_8C">Post it on Social Media</string>
    <string name="question_8D">Go out immediately</string>
    <string name="answer_8">Duck, Cover, and Hold</string>
    <string name="question_9">Which of the following is responsible for  relevant information of the volcanic and earthquake?</string>
    <string name="question_9A">PAGASA</string>
    <string name="question_9B">DepEd</string>
    <string name="question_9C">DSWD</string>
    <string name="question_9D">PHIVOLCS</string>
    <string name="answer_9">PHIVOLCS</string>
    <string name="question_10">What is the BEST thing to do when there is a tropical typhoon? </string>
    <string name="question_10A">Ignore the weather condition and just go on with usual routines</string>
    <string name="question_10B">Stay at home and prepare for the effects of the typhoons </string>
    <string name="question_10C">Organize an outing with the family </string>
    <string name="question_10D">All of the above </string>
    <string name="answer_10">Stay at home and prepare for the effects of the typhoons</string>
    <string name="question_10.1">It is a sudden shaking of the Ground.</string>
    <string name="question_10A.1">Earthquake</string>
    <string name="question_10B.1">Volcanic Eruption</string>
    <string name="question_10C.1">Sandstorm</string>
    <string name="question_10D.1">Landslide</string>
    <string name="answer_10.1">Earthquake</string>
    <string name="question_10.2">What does PHILVOCS stands for?</string>
    <string name="question_10A.2">Philippine Institute of Volcanology and Seismology</string>
    <string name="question_10B.2">Philippines Institute of Volcanic and Seismetic</string>
    <string name="question_10C.2">Philippines Instite of Vulkanic and Systematic</string>
    <string name="question_10D.2">None of the above</string>
    <string name="answer_10.2">Philippine Institute of Volcanology and Seismology</string>
    <string name="question_10.3">This disaster release spew hot, dangerous gases, ash, lava, and rock that are powerfully destructive.</string>
    <string name="question_10A.3">Volcanic Eruption</string>
    <string name="question_10B.3">Typhoon</string>
    <string name="question_10C.3">Forest Fire</string>
    <string name="question_10D.3">None of the above</string>
    <string name="answer_10.3">Volcanic Eruption</string>
    <string name="question_10.4">It is a path along the Pacific ocean, wherein active volcanoes and frequent earthquakes can be found?</string>
    <string name="question_10A.4">Ring of Earthquake</string>
    <string name="question_10B.4">Ring of fire</string>
    <string name="question_10C.4">Lord of the Rings</string>
    <string name="question_10D.4">Ring of water </string>
    <string name="answer_10.4">Ring of fire</string>
    <string name="question_10.5">A natural disaster is a(n) ____ event.</string>
    <string name="question_10A.5">Expected</string>
    <string name="question_10B.5">Unexpected</string>
    <string name="question_10C.5">Planned</string>
    <string name="question_10D.5">Scheduled </string>
    <string name="answer_10.5">Unexpected</string>
    <string name="question_10.6">A _____ is a giant, rotating storm that brings wind, rain, and destruction.</string>
    <string name="question_10A.6">Fire Tornado</string>
    <string name="question_10B.6">Tornado</string>
    <string name="question_10C.6">Typhoon</string>
    <string name="question_10D.6">None of the above </string>
    <string name="answer_10.6">Typhoon </string>
    <string name="question_10.7">It is a smaller earthquake following the main shock of a large earthquake.</string>
    <string name="question_10A.7">foreshock</string>
    <string name="question_10B.7">none of the above</string>
    <string name="question_10C.7">aftershock</string>
    <string name="question_10D.7">main shock </string>
    <string name="answer_10.7">aftershock</string>
    <string name="question_10.8">____ is extremely hot liquid and semi-liquid rock located under earth surface.</string>
    <string name="question_10A.8">Lava</string>
    <string name="question_10B.8">Magma</string>
    <string name="question_10C.8">Magna</string>
    <string name="question_10D.8">I do not know </string>
    <string name="answer_10.8">Magma</string>
    <string name="question_10.9">This natural disaster can trigger flash floods, earthquakes, mudflows and rockfalls.</string>
    <string name="question_10A.9">Mountain</string>
    <string name="question_10B.9">Hill</string>
    <string name="question_10C.9">Explosion</string>
    <string name="question_10D.9">Volcano</string>
    <string name="answer_10.9">Volcano</string>
    <string name="question_10.10">There is a typhoon approaching to the Philippines and the forecast says your city is on signal number 3. What will you do? </string>
    <string name="question_10A.10">Play mobile Games</string>
    <string name="question_10B.10">Prepare stocks like food, batteries, and flashlight</string>
    <string name="question_10C.10">Prepare popcorn, movies, and snacks so you can relax during the typhoon.</string>
    <string name="question_10D.10">Call the authorities</string>
    <string name="answer_10.10">Prepare stocks like food, batteries, and flashlight</string>
    <string name="selctedoption">SelectedOption</string>
    <string name="correctanswer">CorrectAnswer</string>
    <string name="question_11">Do you think the destructive effects of a tropical cyclone can be avoided through preparations ?</string>
    <string name="question_11A">TRUE, because by being prepared we can help to prevent/minimize damages</string>
    <string name="question_11B">FALSE, I don’t think that is the case</string>
    <string name="question_11C">Maybe</string>
    <string name="question_11D">None of the Above</string>
    <string name="answer_11A">TRUE, because by being prepared we can help to prevent/minimize damages</string>
    <string name="question_12">Typhoon is also known as a term ______ ______?</string>
    <string name="question_12A">Tropical Cyclone</string>
    <string name="question_12B">Heavy Storm</string>
    <string name="question_12C">Heavy Rain</string>
    <string name="question_12D">Huge Phenomena</string>
    <string name="answer_12B">Tropical Cyclone</string>
    <string name="question_13">____ is the number that characterizes the relative size of an earthquake.</string>
    <string name="question_13A">Magnitude</string>
    <string name="question_13B">Attitude</string>
    <string name="question_13C">Altitude</string>
    <string name="question_13D">Richter Scale</string>
    <string name="answer_13B">Magnitude</string>
    <string name="question_14">Which of the following is not an effect of an Earthquake?</string>
    <string name="question_14A">Damage to buildings</string>
    <string name="question_14B">Landslides and rockslides</string>
    <string name="question_14C">Trigger tsunamis</string>
    <string name="question_14D">Air pollution</string>
    <string name="answer_14A">Air pollution</string>
    <string name="question_15">Is it safe to stay inside the car during floodwater?</string>
    <string name="question_15A">YES, since we can just stay inside and wait for rescue</string>
    <string name="question_15B">NO, because we will get trapped inside the car</string>
    <string name="question_15C">Maybe</string>
    <string name="question_15D">None of the Above</string>
    <string name="answer_15">NO, because we will get trapped inside the car</string>
    <string name="question_16"> What does PHIVOLCS stands for?</string>
    <string name="question_16A">Philippine Institute of Volcanology and Seismology</string>
</resources>